# sloth256-189

./: .gitignore  CHANGELOG.md  Cargo.toml  Documentation(CUDA).md  Documentation.md  LICENSE-MIT  README.md  build.rs  implementation.md
.github/workflows/: ci.yaml
benches/: cpu.rs  cpu_sloth.rs  cuda.rs  cuda_sloth.rs  opencl.rs  software.rs
src/: assembly.S  cpu_sloth.rs  cuda.rs  encode_ptx.h  gpu.rs  gpu_sloth.rs  lib.rs  mod256-189-x86_64.pl  ptx.cu  ptx_test.cu  refresh.sh  sloth256_189.c  sloth256_189.cu  sloth256_189.h  tests.rs
src/a_piece/: mod.rs
src/coff/: mod256-189-x86_64.s
src/cpu/: Documentation.md  README.md  mod.rs  sloth256_189.c  sloth256_189.cu  tests.rs
src/cpu/mach-o/: mod256-189-x86_64.s
src/cpu/win64/: mod256-189-x86_64.asm
src/cuda/: README.md  encode_ptx.h  mod.rs  ptx.cu  tests.rs
src/elf/: mod256-189-x86_64.s
src/gpu/: encode_ptx.h  ptx.cu  tests.rs
src/mach-o/: mod256-189-x86_64.s
src/opencl/: encode.cl  mod.rs  mod256-189.cu  non_nvidia.cl  nvidia_specific.cl  opencl.cpp  opencl_error_codes.rs  opencl_utils.hpp
src/win64/: mod256-189-x86_64.asm
tests/: compare_orig.rs
tests/integration/: cpu.rs  cuda.rs  main.rs  opencl.rs  test_vectors.rs  utils.rs
