[package]
name = "sloth256-189"
version = "0.2.0"
description = "Encoder/decoder for the Subspace Network Blockchain based on the SLOTH permutation"
authors = [
    # CPU implementation in C and x86-64 Assembly
    "Andy Polyakov <appro@cryptogams.org>",
    # CUDA implementation in PTX
    "Özgün Özerk <ozgun@subspace.network>",
    "Nazar Mokrynskyi <nazar@mokrynskyi.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["sloth", "subspace"]
documentation = "https://docs.rs/sloth256-189"
repository = "https://github.com/subspace/sloth256-189"
readme = "README.md"
include = [
    "/benches",
    "/src",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
rayon = "1.5.1"

[build-dependencies]
cc = "1.0.70"
glob = "0.3.0"
which = "^4.2.2"

[features]
default = []
# Force-disable ASM x86-64 implemenation for testing/benchmarking purposes
no-asm = []
cuda = []

[[bench]]
name = "cpu"
harness = false

[[bench]]
name = "cuda"
harness = false
