[package]
name = "sloth256-189"
version = "0.3.1"
description = "Encoder/decoder for the Subspace Network Blockchain based on the SLOTH permutation"
authors = [
    # CPU implementation in C and x86-64 Assembly
    "Andy Polyakov <appro@cryptogams.org>",
    # CUDA implementation in PTX
    "Özgün Özerk <ozgun@subspace.network>",
    "Nazar Mokrynskyi <nazar@mokrynskyi.com>",
]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["sloth", "subspace"]
documentation = "https://docs.rs/sloth256-189"
repository = "https://github.com/subspace/sloth256-189"
readme = "README.md"
include = [
    "/benches",
    "/src",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
]

[package.metadata.docs.rs]
features = ["cuda", "opencl"]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
thiserror = "1.0"
openmp-sys = { version = "1.2.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
getrandom = { version = "0.2.6", features = ["js"] }
rand = { version = "0.8.4", default-features = false }
rayon = "1.5.1"

[build-dependencies]
cc = "1.0.70"
glob = "0.3.0"
which = "^4.2.2"

[features]
default = ["std"]
std = [
    "rand/std",
    "rand/std_rng",
]
# Force-disable ASM x86-64 implemenation for testing/benchmarking purposes
no-asm = []
cuda = []
opencl = [
    "openmp-sys",
]

[[bench]]
name = "cpu"
harness = false

[[bench]]
name = "cuda"
harness = false
required-features = ["cuda"]

[[bench]]
name = "opencl"
harness = false
required-features = ["opencl"]
